--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>Login Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
+            background-image: url('background.jpg'); /* Change 'background.jpg' to the path of your background image */
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
         }
         .login-container {
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.8); /* Transparent white background */
             border-radius: 5px;
             padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
             width: 300px;
             text-align: center;
         }
