--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('background.jpg'); /* Change 'background.jpg' to the path of your background image */
+            background-image: url('Center-Image-Size-Template-1.jpg'); /* Change 'background.jpg' to the path of your background image */
             background-size: cover;
             background-position: center;
             height: 100vh;
